--- a/views/code.ejs
+++ b/views/code.ejs
@@ -1,57 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Dashboard - <%= title %>
-    </title>
+    <title>Dashboard - <%= title %></title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/code.css" />
-    <link href="../assets/css/style.css" rel="stylesheet" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="/assets/css/code.css" />
+    <link href="/assets/css/style.css" rel="stylesheet" />
+  </head>
 
-<body>
-    <div class="container height-100 d-flex justify-content-center align-items-center">
-        <div class="position-relative">
-            <div class="d-flex justify-content-center py-4">
-                <a href="index.html" class="logo d-flex align-items-center w-auto">
-                    <img src="../assets/img/logo.png" alt="" />
-                    <span class="d-none d-lg-block">GoAlim</span>
-                </a>
-            </div>
-            <div class="card p-2 text-center">
-                <h6>Please enter your code to activate your account</h6>
-                <div>
-                    <span>A code has been sent to this address </span>
-                    <small>*******9897</small>
-                </div>
-                <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2">
-                    <input class="m-2 text-center form-control rounded" type="text" id="first" maxlength="1" />
-                    <input class="m-2 text-center form-control rounded" type="text" id="second" maxlength="1" />
-                    <input class="m-2 text-center form-control rounded" type="text" id="third" maxlength="1" />
-                    <input class="m-2 text-center form-control rounded" type="text" id="fourth" maxlength="1" />
-                    <input class="m-2 text-center form-control rounded" type="text" id="fifth" maxlength="1" />
-                    <input class="m-2 text-center form-control rounded" type="text" id="sixth" maxlength="1" />
-                </div>
-                <div class="mt-4">
-                    <button class="btn btn-primary px-4 validate">Validate</button>
-                </div>
-            </div>
-            <div class="card-2">
-                <div class="content d-flex justify-content-center align-items-center">
-                    <span>Didn't get the code</span>
-                    <a href="#" class="text-decoration-none ms-3">Resend(1/3)</a>
-                </div>
-            </div>
+  <body>
+    <div
+      class="container height-100 d-flex justify-content-center align-items-center"
+    >
+      <div class="position-relative">
+
+        <!-- session message -->
+        <% if (message) { %>
+        <div
+          class="alert alert-<%= message.type %> alert-dismissible fade show"
+          role="alert"
+        >
+          <%= message.message %>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
         </div>
+        <% } %>
+        <!--  -->
+
+        <div class="d-flex justify-content-center py-4">
+          <a href="index.html" class="logo d-flex align-items-center w-auto">
+            <img src="/assets/img/logo.png" alt="" />
+            <span class="d-none d-lg-block">GoAlim</span>
+          </a>
+        </div>
+        <div class="card p-2 text-center">
+          <form
+            action="/dashboard/verification-code/<%= userId %>"
+            method="post"
+          >
+            userId: <%= userId %>
+            <h6>Please enter your code to activate your account</h6>
+            <div>
+              <span>A code has been sent to this address </span>
+              <small>*******9897</small>
+            </div>
+            <div
+              id="otp"
+              class="inputs d-flex flex-row justify-content-center mt-2"
+            >
+              <input
+                class="m-2 text-center form-control rounded"
+                type="number"
+                id="first"
+                name="first"
+                maxlength="1"
+                required
+              />
+              <input
+                class="m-2 text-center form-control rounded"
+                type="number"
+                id="second"
+                name="second"
+                maxlength="1"
+                required
+              />
+              <input
+                class="m-2 text-center form-control rounded"
+                type="number"
+                id="third"
+                name="third"
+                maxlength="1"
+                required
+              />
+              <input
+                class="m-2 text-center form-control rounded"
+                type="number"
+                id="fourth"
+                name="fourth"
+                maxlength="1"
+                required
+              />
+              <input
+                class="m-2 text-center form-control rounded"
+                type="number"
+                id="fifth"
+                name="fifth"
+                maxlength="1"
+                required
+              />
+              <input
+                class="m-2 text-center form-control rounded"
+                type="number"
+                id="sixth"
+                name="sixth"
+                maxlength="1"
+                required
+              />
+            </div>
+            <div class="mt-4">
+              <button
+                type="submit"
+                name="submit"
+                class="btn btn-primary px-4 validate"
+              >
+                Validate
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="card-2">
+          <div class="content d-flex justify-content-center align-items-center">
+            <span>Didn't get the code</span>
+            <a href="#" class="text-decoration-none ms-3">Resend(1/3)</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/code.js"></script>
-</body>
-
+    <script src="/assets/js/code.js"></script>
+  </body>
 </html>
